# cosmos

./: .gitignore  BOOTX64.EFI  Cargo.toml  Makefile.toml  run_qemu.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
boot/: Cargo.toml  Makefile.toml
boot/src/: main.rs
common/src/: lib.rs
kernel/: Cargo.toml  Makefile.toml  x86_64-unknown-none-elf.json
kernel/.cargo/: config.toml
kernel/src/: console.rs  global.rs  graphics.rs  main.rs  pci.rs  x86.rs
kernel/src/graphics/: console.rs  mouse.rs  screen.rs
src/: allocator.rs  lib.rs  main.rs  print.rs  trap.rs
src/lds/: kernel.ld
