[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", default-features = false }
common = { path = "../common" }
object = { version = "0.28.4", default-features = false, features = ["read"] }
uefi = { version = "0.16.0", features = ["alloc", "exts"] }
uefi-services = "0.13.0"
